[package]
edition = "2021"
name = "woningzoeker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde_json = "1"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.5", features = ["env-filter", "std"]}
